plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'auction'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:2.0.0-M4"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'

    // QueryDSL
    implementation 'io.github.openfeign.querydsl:querydsl-core:7.1'
    implementation 'io.github.openfeign.querydsl:querydsl-jpa:7.1'
    annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:7.1:jpa'

    // Spring AI
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'  // DeepSeek V3 채팅 + OpenAI 임베딩
    implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector' // RAG용 pgvector 벡터 저장소

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Cache
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // Social Login
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // redisson
    implementation 'org.redisson:redisson-spring-boot-starter:4.0.0'

    // actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // parameter-store
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-parameter-store:4.0.0'

    // AWS EventBridge Scheduler
    implementation 'software.amazon.awssdk:scheduler:2.42.20'

    // monitoring and aws deployment dependencies
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:4.0.0')
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-parameter-store'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
    useJUnitPlatform()
}
